積んでる日数を表示するように
