# docs/api-definition.yaml
@@ -12,8 +12,8 @@ tags:
 servers:
   - url: http://localhost:3000/
     description: 開発環境
-# security:
-#   - Bearer: []
+security:
+  - cookieAuth: []
 paths:
   /signup:
     post:
@@ -45,6 +45,11 @@ paths:
                   token:
                     type: string
                     example: "token"
+          headers:
+            Set-Cookie:
+              schema:
+                type: string
+                example: token=abcde12345; Path=/; HttpOnly
         401:
           description: 認証エラー
         403:
@@ -393,6 +398,8 @@ paths:
                   type: string
                 status:
                   type: string
+                piledUpAt:
+                  type: string
               required:
                 - bookName
                 - status
@@ -518,7 +525,6 @@ components:
           type: number
           description: 本の値段
           example: 1200
-          nullable: true
         bookAuthor:
           type: string
           description: 本の著者
@@ -539,8 +545,12 @@ components:
           description: 積読の状態
           example: 積読
           nullable: true
+        piledUpAt:
+          type: string
+          description: 積み始めた日
+          example: 2024-05-13T15:00:00.000Z
   securitySchemes:
-    Bearer:
-      type: http
-      scheme: bearer
-      description: Access token for API
+    cookieAuth: # arbitrary name for the security scheme; will be used in the "security" key later
+      type: apiKey
+      in: cookie
+      name: token # cookie name
